[project]
name = "antarctic"
version = "0.0.0"
description = "..."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mongoengine>=0.25.0",
    "pandas>=2.0",
    "pyarrow>=0.15.0",
    "fastparquet>=0.8.0"
]
authors = [{name = "Thomas Schmelzer", email = "thomas.schmelzer@gmail.com"}]

[project.urls]
repository = "https://github.com/tschm/antarctic"
homepage = "https://tschm.github.io/antarctic/book"


[project.optional-dependencies]
dev = [
    "pytest-cov==6.2.1",
    "pytest==8.4.1",
    "pre-commit==4.2.0",
    "mongomock==4.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/antarctic"]

[tool.deptry]
# see https://deptry.com/usage/#pep-621-dev-dependency-groups
pep621_dev_dependency_groups = ["dev"]

[tool.deptry.per_rule_ignores]
# bson is part of pymongo package and should not be installed separately
DEP002 = ["fastparquet", "bson"]

[tool.ruff]
line-length = 120
target-version = "py312"
[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
