[project]
name = "antarctic"
version = "0.9.7"
description = "..."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mongoengine>=0.25.0",
    "pandas>=2.0",
    "pyarrow>=22.0.0",
    "fastparquet>=0.8.0"
]
authors = [{name = "Thomas Schmelzer", email = "thomas.schmelzer@gmail.com"}]

[project.urls]
repository = "https://github.com/tschm/antarctic"
homepage = "https://tschm.github.io/antarctic/book"


[project.optional-dependencies]
dev = [
    "pytest-cov==7.0.0",
    "pytest==9.0.2",
    "pytest-html>=4.0",
    "pre-commit==4.5.1",
    "mongomock==4.3.0",
    "python-dotenv==1.2.1",
    "plotly==6.5.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/antarctic"]

[tool.deptry]
# see https://deptry.com/usage/#pep-621-dev-dependency-groups
pep621_dev_dependency_groups = ["dev"]

[tool.deptry.per_rule_ignores]
# bson is part of pymongo package and should not be installed separately
DEP001 = ["bson"]
DEP002 = ["fastparquet"]

