[project]
name = "antarctic"
version = "0.9.7"
description = "..."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mongoengine>=0.25.0",
    "pandas>=2.0",
    "pyarrow>=22.0.0",
    "fastparquet>=0.8.0"
]
authors = [{name = "Thomas Schmelzer", email = "thomas.schmelzer@gmail.com"}]

[project.urls]
repository = "https://github.com/tschm/antarctic"
homepage = "https://tschm.github.io/antarctic/book"

[dependency-groups]
dev = [
    "mongomock==4.3.0",
    "plotly==6.5.2",
    "numpy>=2.4",
    "marimo>=0.18",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/antarctic"]

[tool.mypy]
[[tool.mypy.overrides]]
module = ["pandas.*", "pyarrow.*", "mongoengine.*", "bson.*"]
ignore_missing_imports = true

[tool.deptry.per_rule_ignores]
# bson is part of pymongo package and should not be installed separately
DEP001 = ["bson"]
DEP002 = ["fastparquet"]

